--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="style.css" />
-
 </head>
+
 <body>
 
+<div id="container">
+
   <div id="header">
+
     <div id="logo-container">
       <h1 class="logo">TICKETHACK</h1>
     </div>
@@ -21,6 +24,12 @@
     </div>
 
   </div>
+
+<div class="content">
+
+</div>
+
+</div>
 
 
 </body>
