edit html/css booking

--- a/home.html
+++ b/home.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<div id="container">
+  
   <div id="header">
     <div id="logo-container">
       <h1 class="logo">TICKETHACK</h1>
@@ -21,7 +23,11 @@
     </div>
 
   </div>
+</div>
 
+  <div id="content">
+  </div>
+</div>
 
 </body>
 </html>
