--- a/booking.html
+++ b/booking.html
@@ -16,10 +16,11 @@
 
   <div id="header">
     <div id="logo-container">
-      <h1 class="logo">Tickethack</h1>
+        <a href="index.html" id="home">TicketHack</a> 
     </div>
 
     <div id="links">
+
     
       <a href="cart.html" id="cart">Cart</a>
     
