--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,11 +7,14 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="style.css" />
-
 </head>
+
 <body>
 
+<div id="container">
+
   <div id="header">
+
     <div id="logo-container">
       <h1 class="logo">TICKETHACK</h1>
     </div>
@@ -21,6 +25,12 @@
     </div>
 
   </div>
+
+<div class="content">
+
+</div>
+
+</div>
 
 
 </body>
