finish page booking

--- a/booking.html
+++ b/booking.html
@@ -8,8 +8,7 @@
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;500&display=swap" rel="stylesheet">
 <body>
 
     <div id="container">
@@ -30,20 +29,34 @@
     </div>
 
   </div>
-  <div id="content">
+<div id="content">
     <div id="booking-container">
-        <div id="mybookings">
 
-        </div>
-        <div id="tripdetails">
+        <div id="alldetails">
+            <div id="mybooking">
+                <p class="mytext"></p> My Bookings</p>
+            </div>
 
-        </div>
-        <div id="enjoy">
+            <div id="tripdetails">
 
+                <div id="booking-details">
+                    <p class="dep-arrival"> Marseille > Lyon </p>
+                    <p class="hour-depart"> 22:10 </p>
+                    <p class="book-price"> 127€ </p>
+                    <p class="time-before-departure"> Departure in 5 hours </p>
+                </div>
+            </div>
+
+            <div id="stick"></div>
+
+    
+            <div id="enjoy">
+                <p class="enjoy-text"> Enjoy your travels with Tickethack!</p>
+            </div>
         </div>
     </div>
 
-  </div>
+</div>
 </div>
 
 
