--- a/index.html
+++ b/index.html
@@ -20,16 +20,38 @@
     </div>
 
     <div id="links">
-      <h3>Cart</h3>
-      <h3>Bookings</h3>
+      <a href="cart.html"><p>Cart</p></a>
+      <a href="booking.html"><p>Bookings</p></a>
     </div>
-
   </div>
 
-<div class="content">
 
-</div>
 
+  <div class="content">
+    <h1>Explore the world effortlessly by train !</h1>
+    <p>Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack</p>
+    <div class="card-container">
+
+      <div class="card-form">
+
+      <form action="#" method="post">
+        <input class="form-field" placeholder="Departure" type="text" id="departure" name="departure" required>
+        <input class="form-field" placeholder="Arrival" type="text" id="arrival" name="arrival" required>
+        <input class="form-field" type="date" id="date" name="date" required>
+        <input id="btn-form"      type="submit" value="Submit">
+      </form>
+
+      </div>
+
+      <div class="card">
+        <div id="card-img">
+          <img src="./images/train.png" alt="">
+        </div>
+        <p style="color: black; font-size: medium;"> It's time to book your future trip</p>
+      </div>
+
+    </div>
+  </div>
 </div>
 
 
