--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
       <div class="card-form">
 
-      <form action="#" method="post">
+      <div id="form">
         <input class="form-field" placeholder="Departure" type="text" id="departure" name="departure" required>
         <input class="form-field" placeholder="Arrival" type="text" id="arrival" name="arrival" required>
         <input class="form-field" type="date" id="date" name="date" required>
-        <input id="btn-form"      type="submit" value="Submit">
-      </form>
+        <button id="btn-form">Search</button>
+      </div>
 
       </div>
 
@@ -54,6 +54,6 @@
   </div>
 </div>
 
-
+<script src="script.js"></script>
 </body>
-</html>x²
+</html>
