--- a/index.html
+++ b/index.html
@@ -1,64 +1,49 @@
 <!DOCTYPE html>
+<html>
 
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-
-  <link rel="stylesheet" href="style.css" />
-
-
+  <title>Tickethack</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="index.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Work+Sans:wght@300;400&display=swap"
+    rel="stylesheet">
+</head>
 
 <body>
-
-<div id="container">
-
   <div id="header">
-    <div id="logo-container">
-        <a href="index.html" id="home">TicketHack</a>
-    </div>
-
-    <div id="links">
-      <a href="cart.html"><p>Cart</p></a>
-      <a href="booking.html"><p>Bookings</p></a>
+    <h1><a id="title" href="index.html">Tickethack</a></h1>
+    <div>
+      <a class="link" href="cart.html">Cart</a> <a class="link" href="bookings.html">Bookings</a>
     </div>
   </div>
 
+  <div id="container">
+    <div id="description">
+      <h2>Explore the world effortlessly by train!</h2>
+      <h3>Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack.</h3>
+    </div>
 
-
-  <div class="content">
-
-    <p id="explore">Explore the world effortlessly by train !</p>
-    <p id= "compare" >Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack</p>
-    <div class="card-container">
-
-      <div class="card-form">
-
-      <div id="form">
-        <input class="form-field" placeholder="Departure" type="text" id="departure" name="departure" required>
-        <input class="form-field" placeholder="Arrival" type="text" id="arrival" name="arrival" required>
-        <input class="form-field" type="date" id="date" name="date" required>
-        <button id="btn-form">Search</button>
+    <div id="card-container">
+      <div id="card">
+        <input class="input" id="departure" type="text" placeholder="Departure" />
+        <div class="divider"></div>
+        <input class="input" id="arrival" type="text" placeholder="Arrival" />
+        <input class="input" id="date" type="date" placeholder="Date" />
+        <button id="search">Search</button>
       </div>
 
+      <div id="results">
+        <img id="results-logo" src="images/train.png" />
+        <div class="divider green"></div>
+        <span>It's time to book your future trip.</span>
       </div>
-
-      <div class="card">
-        <div id="card-img">
-          <img src="./images/train.png" alt="">
-        </div>
-        <div id="stick"></div>
-        <p class="timetobook"> It's time to book your future trip.</p>
-      </div>
-
     </div>
   </div>
-</div>
 
-<script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.3/moment.min.js"></script>
+  <script src="index.js"></script>
 </body>
+
 </html>
