--- a/bookings.html
+++ b/bookings.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <title>Tickethack - My cart</title>
+  <title>Tickethack - Bookings</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="cart.css" />
+  <link rel="stylesheet" href="bookings.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Work+Sans:wght@300;400&display=swap"
@@ -20,21 +20,16 @@
   </div>
 
   <div id="container">
-    <div id="cart">
-      <p>No tickets in your cart.</p>
+    <div id="trips">
+      <p>No booking yet.</p>
       <p>Why not plan a trip?</p>
     </div>
 
-    <div id="cart2" style="display: none;">
-      <div id="payment">
-        <span>Total : <span id="total">0</span>€</span>
-        <button id="purchase">Purchase</button>
-      </div>
-    </div>
+    <div id="trips2" style="display: none;"></div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.3/moment.min.js"></script>
-  <script src="cart.js"></script>
+  <script src="bookings.js"></script>
 </body>
 
 </html>
