--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <div id="container">
     <div id="description">
       <h2>Explore the world effortlessly by train!</h2>
+      <h2>To test the code you have to book before de 31/01/2024</h2>
       <h3>Compare, book and enjoy cheap prices for train tickets: your journey starts on Tickethack.</h3>
     </div>
 
